fix: replase sass, add: switcher

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "webpack --watch",
-    "style": "sass sass/style.scss sass/style.css --watch"
+    "style": "sass src/sass/style.scss src/sass/style.css --watch"
   },
   "repository": {
     "type": "git",
