--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -29,7 +29,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "swiper": "^5.3.8"
   }
 }
